frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: tahirrida/frontendvf:1.0.0
          livenessProbe:
            httpGet:
              path: /healthz # Endpoint à vérifier
              port: 80 # Port sur lequel effectuer la vérification
            initialDelaySeconds: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /readiness # Endpoint à vérifier pour la disponibilité
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /startup # Endpoint pour vérifier le démarrage
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          ports:
            - containerPort: 80
              name: http-port
